# CoperFirmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Configs/: config.json  init.json  test.json
Dependencies/: CMakeLists.txt
Dependencies/Units/: CMakeLists.txt
Dependencies/Units/unitTests/: main.cpp
Dependencies/mbed-cmake-config/cmake/: MBedOSConfig.cmake
Dependencies/mbed-cmake-config/config-headers/: mbed_config.h  mbed_target_config.h
Src/: CMakeLists.txt  Config.hpp  main.cpp  mbed_config.h
Src/Control/: ControlScheme.hpp  Controller.cpp  Controller.hpp  PIDControl.hpp  SelfLevelControl.cpp  SelfLevelControl.hpp
Src/Controller/: PIDControl.hpp
Src/Drivers/: I2CInterface.cpp  I2CInterface.hpp
Src/Engine/: DShot.cpp  DShot.hpp  Driver.hpp  Interface.cpp  Interface.hpp  Motor.cpp  Motor.hpp  MotorContainer.hpp  ProtocolInterface.hpp
Src/GitChanges/: Format.txt  GitChanges.txt
Src/Libraries/ArduinoJson/: ArduinoJson-v5.13.2.hpp
Src/Libraries/mbed-os/platform/: NonCopyable.h
Src/Sensors/: AccelVoter.hpp  AltitudeExtension.hpp  AngleExtension.hpp  GyroVoter.hpp  MPU9250.cpp  MPU9250.hpp  MagVoter.hpp  Mpu9250.hpp  Repository.hpp  SensorContainer.hpp  SensorInterface.hpp  SensorRepository.hpp  ThermoVoter.hpp
Src/Sensors/Filters/: Complementary.hpp  HighPass.hpp  LinearKalman.hpp  LowPass.hpp  None.hpp
Src/Sensors/Interfaces/: Accelerometer.hpp  Altitude.hpp  Angle.hpp  BaseSensor.hpp  Gyroscope.hpp  Magnetometer.hpp  Sensor.hpp  Thermometer.hpp  Voter.hpp
Src/Src/: copter_Config.h  main.cpp
Src/Src/Application/: Application.cpp  Application.hpp
Src/Src/Application/Drivers/: FileSystem.cpp  FileSystem.hpp  I2CWrap.cpp  I2CWrap.hpp
Src/Src/Application/Drivers/FileSystem/: FileSystem.cpp  FileSystem.hpp  Interface.hpp  MediaInterface.hpp
Src/Src/Application/Drivers/FileSystem/SDFATSystem/: SDFatSystem.cpp  SDFatSystem.hpp
Src/Src/Application/Drivers/I2C/: I2CWrap.cpp  I2CWrap.hpp
Src/Src/Application/Sensors/: Factory.cpp  Factory.hpp  Package.cpp  Sensors.cpp  Sensors.hpp
Src/Src/Application/Sensors/Factory/: Factory.hpp
Src/Src/Application/Sensors/Factory/Models/: Chip.cpp  Chip.hpp
Src/Src/Application/Sensors/Factory/Models/IMU/: MPU9250.cpp  MPU9250.hpp
Src/Src/Application/Sensors/Filter/: BaseFilter.cpp  BaseFilter.hpp  CustomKalmanFilter.cpp  CustomKalmanFilter.hpp  Kalmin.hpp
Src/Src/Application/Sensors/Models/: Chip.hpp
Src/Src/Application/Sensors/Validator/: Validator.cpp  Validator.hpp
Src/Src/Application/Settings/: Settings.cpp  Settings.hpp
Src/Src/Application/Settings/Repository/: BaseSettings.hpp  Local.cpp  Local.hpp  RepoBase.hpp
Src/Src/Application/Settings/Repository/Sensor/: Settings.cpp  Settings.hpp
Src/Src/Bootloader/: Startup.cpp  Startup.hpp  Storage.cpp  Storage.hpp
Src/Src/Debugger/: Debug.hpp
Src/Src/Storage/: Manager.cpp  Manager.hpp
UnitTests/: CMakeLists.txt
UnitTests/Hovering/: CMakeLists.txt  main.cpp
UnitTests/Motors/: CMakeLists.txt  main.cpp
UnitTests/Sensors/: CMakeLists.txt  main.cpp
